--- a/news.html
+++ b/news.html
@@ -22,7 +22,7 @@
           <a href="/" class="block py-2 text-gray-800 opacity-0 transform translate-y-3 transition-all duration-300 delay-100 hover:text-blue-600 hover:underline">Home</a>
           <a href="/news" class="block py-2 text-gray-800 opacity-0 transform translate-y-3 transition-all duration-300 delay-200 hover:text-blue-600 hover:underline">News</a>
           <a href="/schedule" class="block py-2 text-gray-800 opacity-0 transform translate-y-3 transition-all duration-300 delay-300 hover:text-blue-600 hover:underline">Schedules</a>
-          <a href="/live" class="block py-2 text-gray-800 opacity-0 transform translate-y-3 transition-all duration-300 delay-400 hover:text-blue-600 hover:underline">Stream</a>
+          <a href="/stream" class="block py-2 text-gray-800 opacity-0 transform translate-y-3 transition-all duration-300 delay-400 hover:text-blue-600 hover:underline">Stream</a>
         </nav>
     </header>
 
