--- a/replay.html
+++ b/replay.html
@@ -39,7 +39,7 @@
         <span class="bg-gradient-to-r from-blue-600 to-black text-transparent bg-clip-text">JKT48 Replay.
       </h1>
       <button class="bg-pink-500 text-white px-4 py-2 rounded-full flex items-center">
-     <a href="/live"
+     <a href="/stream"
        <i class="fas fa-play mr-2"></i> Live
        </a>
       </button>
